# TemplateLibrary

./: CMakeLists.txt  CMakePresets.json  Messages.cpp  Messages.h  build.bat
cmake/: testConfig.cmake  testlibConfig.cmake
